yaml configs added for the ThingsBoard setup